# scnr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: scanner_benchmark.rs  veryl_modes.json
doc/: scnr.puml
scnr/: Cargo.toml
scnr/benches/: input_1.par  scanner_benchmark.rs  veryl_input.veryl  veryl_match_fn.rs
scnr/src/: errors.rs  find_matches.rs  lib.rs  match_type.rs  pattern.rs  scanner.rs  scanner_builder.rs  scanner_cache.rs
scnr/src/internal/: ast_with_pattern.rs  character_class.rs  character_class_registry.rs  comparable_ast.rs  compiled_dfa.rs  compiled_lookahead.rs  compiled_scanner_mode.rs  dot.rs  find_matches_impl.rs  hir_with_pattern.rs  match_function.rs  minimizer.rs  mod.rs  multi_pattern_nfa.rs  nfa.rs  parser.rs  rust_code_formatter.rs  scanner_cache.rs  scanner_impl.rs  scanner_impl_rx.rs
scnr/tests/: e2e_test.rs  extract.ps1  match_test.rs  match_test_hir.rs  trace_compiled_dfa_as_dot.rs
scnr/tests/data/: negative_lookahead_n.input  negative_lookahead_p.input  negative_lookahead_p.json  nongreedy2.json  parol_tokens.json  positive_lookahead_n.input  positive_lookahead_n.json  positive_lookahead_p.input  positive_lookahead_p_tokens.json  string.json
scnr_derive/: Cargo.toml
scnr_derive/src/: lib.rs
scnr_generate/: Cargo.toml
scnr_generate/src/: character_class.rs  character_class_registry.rs  compiled_dfa.rs  compiled_lookahead.rs  compiled_scanner_mode.rs  dot.rs  errors.rs  find_matches.rs  find_matches_impl.rs  generate.rs  hir_with_pattern.rs  ids.rs  lib.rs  match_function.rs  match_type.rs  minimizer.rs  multi_pattern_nfa.rs  nfa.rs  parser.rs  pattern.rs  peek_result.rs  scanner_data.rs  scanner_impl.rs  scanner_mode.rs  scanner_mode_switcher.rs  span.rs  with_positions.rs
scnr_macro/: Cargo.toml
src/: errors.rs  find_matches.rs  lib.rs  match_type.rs  pattern.rs  position.rs  scanner.rs  scanner_builder.rs  scanner_mode.rs  span.rs  with_positions.rs
src/internal/: char_matcher.rs  character_class.rs  character_class_registry.rs  comparable_ast.rs  compiled_dfa.rs  compiled_lookahead.rs  compiled_nfa.rs  compiled_scanner_mode.rs  dfa.rs  dot.rs  find_matches_impl.rs  ids.rs  match_function.rs  matching_state.dot  matching_state.rs  minimizer.rs  mod.rs  multi_pattern_nfa.rs  nfa.rs  parser.rs  scanner_cache.rs  scanner_impl.rs  scanner_impl_rx.rs  scanner_nfa_impl.rs
tests/: e2e_test.rs  extract.ps1  match_test.rs  trace_compiled_dfa_as_dot.rs
tests/data/: negative_lookahead_n_tokens.json  negative_lookahead_p.tokens  negative_lookahead_p_tokens.json  nongreedy1.input  nongreedy1.json  nongreedy1.modes  nongreedy1.tokens  nongreedy1_tokens.json  nongreedy2.json  nongreedy2.modes  nongreedy2.tokens  nongreedy2_tokens.json  parol.input  parol.json  parol.tokens  parol_tokens.json  positive_lookahead_n.input  positive_lookahead_n_tokens.json  string.modes  string.tokens  string_tokens.json
