[package]
name = "scnr"
version = "0.6.0"
edition = "2021"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "Scanner/Lexer with regex patterns and multiple modes"
documentation = "https://docs.rs/scnr"
repository = "https://github.com/jsinger67/scnr"
readme = "README.md"
keywords = ["scanner", "lexer", "tokenizer"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"

[dependencies]
dot-writer = "0.1.4"
log = "0.4.22"
regex-syntax = "0.8.5"
rustc-hash = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
seshat-unicode = "0.3.1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.5"
regex = "1.11.1"

[[bench]]
name = "scanner_benchmark"
harness = false

[profile.release]
debug = true
