[package]
name = "scnr"
version = "0.7.1"
edition = "2021"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "Scanner/Lexer with regex patterns and multiple modes"
documentation = "https://docs.rs/scnr"
repository = "https://github.com/jsinger67/scnr"
readme = "README.md"
keywords = ["scanner", "lexer", "tokenizer"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
dot-writer = "0.1.4"
log = "0.4.25"
regex-automata = { version = "0.4.9", optional = true }
regex-syntax = "0.8.5"
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seshat-unicode = { version = "0.3.1", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.6"
regex = "1.11.1"

[[bench]]
name = "scanner_benchmark"
harness = false

[features]
default = ["dep:seshat-unicode"]
regex_automata = ["dep:regex-automata"]


[profile.release]
opt-level = 3
lto = true
debug = true
