[workspace]
members = ["scnr", "scnr_macro", "scnr_generate"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
keywords = ["scanner", "lexer", "tokenizer"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"

[profile.release]
opt-level = 3
lto = true
debug = true
