[package]
name = "scnr"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Scanner/Lexer with regex patterns and multiple modes"
documentation = "https://docs.rs/scnr"
repository = "https://github.com/jsinger67/scnr"
readme = "README.md"
build = "build.rs"

[dependencies]
log = "0.4.25"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex-automata = { version = "0.4.9", optional = true }
rustc-hash = "2.1.0"
scnr_generate = { version = "0.9.0", path = "../scnr_generate", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
syn = { version = "2.0.100", features = ["full"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.6"
regex = "1.11.1"

[[bench]]
name = "scanner_benchmark"
harness = false

[features]
default = ["dot_writer", "serde", "dep:scnr_generate"]
regex_automata = ["dep:regex-automata", "serde"]
dot_writer = ["scnr_generate?/dot_writer"]
serde = ["dep:serde", "dep:serde_json"]
