[package]
name = "scnr"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Scanner/Lexer with regex patterns and multiple modes"
documentation = "https://docs.rs/scnr"
repository = "https://github.com/jsinger67/scnr"
readme = "README.md"
build = "build.rs"

[dependencies]
dot-writer = { version = "0.1.4", optional = true }
log = "0.4.25"
regex-automata = { version = "0.4.9", optional = true }
regex-syntax = "0.8.5"
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
seshat-unicode = { version = "0.3.1", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = "0.7.0"
env_logger = "0.11.6"
regex = "1.11.1"

[[bench]]
name = "scanner_benchmark"
harness = false

[features]
default = ["scnr_unicode", "dot_writer", "serde"]
regex_automata = ["dep:regex-automata", "serde"]
scnr_unicode = ["dep:seshat-unicode"]
dot_writer = ["dep:dot-writer"]
serde = ["dep:serde", "dep:serde_json"]
